# biolab-agent-planner

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
artifacts/lora-protocol-text/: bench_report.json
data/reagents/: abbrev_map.json
eval/: harness.py
src/biolab_agent/: cli.py
src/biolab_agent/agent/: optimized_agent.py  planner.py
src/biolab_agent/agent/compiler/: __init__.py  config.py  executor.py  fetcher.py  joiner.py  llm_session.py  plan.py  renderers.py  tool_registry.py  types.py
src/biolab_agent/tools/: __init__.py  compose.py  lookup_reagents.py  rag_hybrid.py  rag_reranker.py  reagents.py
ui/: app.py
